// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CopyToClipboardButton > renders correctly if link should be copied 1`] = `
<div
  data-v-app=""
>
  
  
  
  <evocon-v-button-stub
    aria-describedby="v-tooltip-v-0"
    class="mx-1"
    color=""
    icon="M18,16.08C17.24,16.08 16.56,16.38 16.04,16.85L8.91,12.7C8.96,12.47 9,12.24 9,12C9,11.76 8.96,11.53 8.91,11.3L15.96,7.19C16.5,7.69 17.21,8 18,8A3,3 0 0,0 21,5A3,3 0 0,0 18,2A3,3 0 0,0 15,5C15,5.24 15.04,5.47 15.09,5.7L8.04,9.81C7.5,9.31 6.79,9 6,9A3,3 0 0,0 3,12A3,3 0 0,0 6,15C6.79,15 7.5,14.69 8.04,14.19L15.16,18.34C15.11,18.55 15.08,18.77 15.08,19C15.08,20.61 16.39,21.91 18,21.91C19.61,21.91 20.92,20.61 20.92,19A2.92,2.92 0 0,0 18,16.08Z"
    iconcolor=""
    id="share-button"
    text=""
    textclass=""
    type="primary"
  />
  
  
  <!--teleport start-->
  <!--teleport end-->
  
</div>
`;

exports[`CopyToClipboardButton > renders correctly if text should be copied 1`] = `
<div
  data-v-app=""
>
  
  
  
  <evocon-v-button-stub
    aria-describedby="v-tooltip-v-0"
    class="mx-1"
    color=""
    icon="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"
    iconcolor=""
    id="share-button"
    text=""
    textclass=""
    type="primary"
  />
  
  
  <!--teleport start-->
  <!--teleport end-->
  
</div>
`;
